--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <footer>
     <p class="attribution"> 
-      Coded by <a href="#">Michael</a>.
+      Coded by <a href="#">Joseph</a>.
     </p>
   </footer>
 
